# serializer version: 1
# name: test_from_github_http_error
  dict({
    'exit_code': 1,
    'stderr': '''
      Error: Could not fetch from GitHub: 404 Client Error: Not Found for url
      
      You can download it directly from:
      https://raw.githubusercontent.com/awslabs/automated-security-helper/main/docs/content/docs/genai-steering-guide.md
  
    ''',
    'stdout': '''
      Fetching GenAI Integration Guide from GitHub (main branch)...
  
    ''',
  })
# ---
# name: test_from_github_network_failure
  dict({
    'exit_code': 1,
    'stderr': '''
      Error: Could not fetch from GitHub: simulated: network is unreachable
      
      You can download it directly from:
      https://raw.githubusercontent.com/awslabs/automated-security-helper/v3/docs/content/docs/genai-steering-guide.md
  
    ''',
    'stdout': '''
      Fetching GenAI Integration Guide from GitHub (v3 branch)...
  
    ''',
  })
# ---
# name: test_local_copy_written
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      ✓ GenAI Integration Guide saved to: <TMP>/guide.md
        Source: local
        File size: 69 bytes
      
      This guide can be provided to AI assistants to help them:
        • Use the correct ASH output formats (JSON, not HTML)
        • Handle severity discrepancies properly
        • Create suppressions correctly
        • Analyze dependencies using CycloneDX SBOM
        • Avoid common pitfalls and known issues
  
    ''',
  })
# ---
# name: test_no_local_copy_falls_back_to_github
  dict({
    'exit_code': 1,
    'stderr': '''
      Error: Could not fetch from GitHub: simulated: network is unreachable
      
      You can download it directly from:
      https://raw.githubusercontent.com/awslabs/automated-security-helper/main/docs/content/docs/genai-steering-guide.md
  
    ''',
    'stdout': '''
      Fetching GenAI Integration Guide from GitHub (main branch)...
  
    ''',
  })
# ---
